@@ -13,15 +13,21 @@
  */
 package org.moqui.impl.service
 
+import groovy.transform.CompileStatic
+
+import org.moqui.Moqui
+import org.moqui.impl.context.ExecutionContextImpl
+import org.moqui.context.ExecutionContextFactory
+import org.moqui.entity.EntityList
+import org.moqui.entity.EntityValue
 import org.quartz.Job
 import org.quartz.JobExecutionContext
 import org.quartz.JobDataMap
-import org.moqui.context.ExecutionContext
-import org.moqui.Moqui
 
 import org.slf4j.Logger
 import org.slf4j.LoggerFactory
 
+@CompileStatic
 class ServiceQuartzJob implements Job {
     protected final static Logger logger = LoggerFactory.getLogger(ServiceQuartzJob.class)
 
@@ -34,25 +40,40 @@ class ServiceQuartzJob implements Job {
         for (String key in jdm.getKeys()) parameters.put(key, jdm.get(key))
         for (String key in tjdm.getKeys()) parameters.put(key, tjdm.get(key))
 
+        if (parameters.ALL_TENANTS == "true") {
+            ExecutionContextFactory ecf = Moqui.getExecutionContextFactory()
+            EntityList tenantList = ecf.entity.find("moqui.tenant.Tenant").disableAuthz().list()
+            for (EntityValue tenant in tenantList) {
+                logger.info("Running scheduled service ${serviceName} for tenant ${tenant.tenantId}")
+                executeSingle(serviceName, parameters, (String) tenant.tenantId)
+            }
+        } else {
+            executeSingle(serviceName, parameters, null)
+        }
+
+    }
+
+    static void executeSingle(String serviceName, Map parameters, String tenantId) {
         if (logger.traceEnabled) logger.trace("Calling async|scheduled service [${serviceName}] with parameters [${parameters}]")
 
-        ExecutionContext ec = Moqui.getExecutionContext()
+        ExecutionContextImpl ec = (ExecutionContextImpl) Moqui.getExecutionContext()
 
         try {
-            String userId = parameters.authUserAccount?.userId ?: parameters.authUsername
-            String password = parameters.authUserAccount?.currentPassword ?: parameters.authPassword
-            String tenantId = parameters.authTenantId
+            Map authUserAccount = (Map) parameters.authUserAccount
+            String userId = authUserAccount?.userId ?: parameters.authUsername
+            String password = authUserAccount?.currentPassword ?: parameters.authPassword
+            if (!tenantId) tenantId = parameters.authTenantId
 
             // logger.warn("=========== running quartz job for ${serviceName}, userId=${userId}, parameters: ${parameters}")
 
             boolean needsAuthzEnable = false
             if (userId && password) {
-                ec.getUser().loginUser(userId, password, tenantId)
+                ec.user.loginUser(userId, password, tenantId)
             } else if (userId) {
                 // debatable if this is the best idea, introduces a security hole with control over job scheduling,
                 //     but that is true in general for execution of server-side code, there are various ways to get
                 //     around authc that are just less convenient
-                ec.getUser().internalLoginUser(userId, tenantId)
+                ec.userFacade.internalLoginUser(userId, tenantId)
                 // authz check will be done when job is scheduled for this sort of case, so don't check authz here
                 needsAuthzEnable = !ec.getArtifactExecution().disableAuthz()
                 // logger.warn("=========== internalLoginUser in job for ${serviceName}, userId=${userId}, ec.user.username: ${ec.user.username}")
@@ -68,7 +89,6 @@ class ServiceQuartzJob implements Job {
                 if (needsAuthzEnable) ec.getArtifactExecution().enableAuthz()
             }
         } catch (Throwable t) {
-            logger.error("Error calling service [${serviceName}] with parameters [${parameters}]", t)
             ec.message.addError(t.message)
             Throwable parent = t.cause
             while (parent != null) {
@@ -79,13 +99,14 @@ class ServiceQuartzJob implements Job {
 
         if (ec.getMessage().hasError()) {
             StringBuilder sb = new StringBuilder()
-            sb.append("Error calling service [${serviceName}] with parameters [${parameters}]\n")
+            sb.append("Error calling service [${serviceName}] in tenant ${tenantId} with parameters ${parameters}\n")
             sb.append(ec.getMessage().getErrorsString())
             logger.error(sb.toString())
 
             // TODO handle retry on error with max-retry?
         }
 
+        // all done, kill the ExecutionContext
         ec.destroy()
     }
 }
